--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OpenNMT-py"]
 	path = OpenNMT-py
-	url = git@github.com:jmnybl/OpenNMT-py.git
+	url = https://github.com/jmnybl/OpenNMT-py.git
