--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,7 @@ example_config:
   transducer_tag: t=TRANS
   preprocess_parameters: "-src_words_min_frequency 5 -tgt_words_min_frequency 5" # preprocess section from OpenNMT-py/onmt/opts.py
   train_parameters: "-gpuid 0 -dropout 0.1" # OpenNMT-py/onmt/opts.py
+  epochs: 20
 
 fi_tdt:
   train: /usr/share/ParseBank/ud-2.2-st-train-dev-data/ud-treebanks-v2.2/UD_Finnish-TDT/fi_tdt-ud-train.conllu
@@ -30,6 +31,7 @@ fi_tdt:
   transducer_tag: t=TRANS
   preprocess_parameters: "-src_words_min_frequency 5 -tgt_words_min_frequency 5"
   train_parameters: "-gpuid 0 -dropout 0.1"
+  epochs: 20
 
 fi_tdt_art:
   train: /usr/share/ParseBank/ud-2.2-st-train-dev-data/ud-treebanks-v2.2/UD_Finnish-TDT/fi_tdt-ud-train.conllu
@@ -46,3 +48,4 @@ fi_tdt_art:
   transducer_tag: t=TRANS
   preprocess_parameters: "-src_words_min_frequency 10 -tgt_words_min_frequency 10"
   train_parameters: "-gpuid 0 -dropout 0.1"
+  epochs: 20
